# RT

./: .gitignore  CMakeLists.txt  Makefile  README.md  RT  RT_CLIENT  RTv1  author  camera_func.c  cone_func.c  cylin_func.c  file_parcing.c  gfx.h  kernel.cl  key_hooks.c  light_calculation.c  light_manipulation.c  main.c  parce_peripherals.c  parce_peripherals_v2.c  plane_func.c  ray_casting.c  ray_tracing.c  rt  rt_functions.h  rt_structs.h  shading_calculation.c  sphere_func.c  vector_functions.c  vector_functions_v2.c
inc/: rtv1.h
includes/: rt_functions.h  rt_structs.h
libft/: Makefile  ft_itoa.c
scenes/: color_disruption  cutted_cylinder  cutted_figures  default_0  mirror_room  reflection_and_transparency  spyder_wupsen  test  textures  triangle  working_test
source/: draw_scene.c  error_manager.c  event_management.c  figures_normals.c  find_fd.c  find_normal_to_figure.c  find_pixel_color.c  main.c  manage_pixel.c  opencl_functions.c  run_rt.c  run_rtv1.c  sdl_keys.c  some_find_color_func.c
source/color_functions/: apply_filter.c  draw_pixel_filter.c  even_more_color_functions.c  find_everything.c  find_pixel_color.c  other_color_disruptions.c  perlin_noise.c  some_find_color_func.c  texture_mapping.c
source/draw_scene/: apply_filter.c  draw_pixel_filter.c  draw_scene.c
source/event_management/: change_object.c  event_management.c  handle_axis_dimensions_for_ellipsoid.c  rotating_and_shift_camera.c  rotating_objects.c
source/find_intersection/: choose_intersection.c  cone_find_closest_intersect.c  cyl_find_closest_intersect.c  ellipsoid_find_closest_intersec.c  ellipsoid_find_closest_intersect.c  plane_find_closest_intersect.c  sphere_find_closest_intersect.c  triangle_find_closest_intersect.c
source/find_normal/: find_normal_for_basic_figure.c  find_normal_for_other_figure.c
source/gui/: create_gui.c  gui.c  gui_check_buttons.c  gui_control_bars_show.c  gui_draw_objects_info.c  gui_draw_objects_info_2.c  gui_init_bmp.c  gui_object_change.c  gui_utils.c
source/math_functions/: actions_on_matrix.c  actions_on_vectors.c  actions_on_vectors2.c  algebraic_operations.c
source/parcing_function/: add_object_and_light.c  add_shape_and_light.c  cam_parcing.c  cone_parcing.c  cylinder_parcing.c  ellipsoid_parcing.c  file_parcing.c  find_fd.c  light_parcing.c  list_to_objects.c  parce_limited.c  parce_peripherals.c  parce_peripherals_v2.c  plane_parcing.c  shape_parcing.c  sphere_parcing.c  triangle_parce.c
source/ray_traycing_functions/: draw_scene.c  error_manager.c  manage_pixel.c  ray_tracing.c
src/: find_normal_to_figure.c  find_pixel_color.c  run_rtv1.c  some_find_color_func.c
trash/: find_pixel_color.c  some_find_color_func.c
